[package]
name = "kanawin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "libloaderapi", "psapi","handleapi","tlhelp32","winbase","errhandlingapi"] }
anyhow ={ version = "1.0"}
log = "0.4"
env_logger = "0.10"
serde_json = "1"
json_dotpath = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
codegen-units = 1